# manthan

./: .pre-commit-config.yaml  LICENSE  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: auth.py  main.py  middlewares.py  schemas.py
backend/src/config/: __init__.py  config.py  logging_config.py  settings.py
backend/src/graph/: __init__.py  constants.py  graph.py  llms.py  states.py
backend/src/graph/nodes/: __init__.py  base.py  query_generator.py  report_writer.py  research_summary.py  safety_check.py  web_search.py
backend/src/graphs/nodes/: base.py
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/api/feedback/: route.ts
frontend/app/api/health/: route.ts
frontend/app/api/health-check/: route.ts
frontend/app/api/research/: route.ts
frontend/app/chat/: page.tsx
frontend/components/: alert.tsx  chat-banner.tsx  chat-section.tsx  footer.tsx  header.tsx  hero-section.tsx  intro-section.tsx  progress-updates.tsx  report-markdown.tsx  seach-queries.tsx  theme-provider.tsx  theme-toggle.tsx  topic-suggestions.tsx
frontend/components/chat/: index.tsx  topic-suggestions.tsx
frontend/components/common/: alert-wrapper.tsx
frontend/components/layout/: footer.tsx  header.tsx
frontend/components/theme/: theme-provider.tsx  theme-toggle.tsx
frontend/components/ui/: rainbow-button.tsx
frontend/config/: site.ts
frontend/hooks/: use-feedback.ts  use-research.ts
frontend/lib/: env.ts
