[project]
name = "ManthanAI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.0",
    "ruff>=0.6.9",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "SIM",  # flake8-simplify
    "I",  # isort
]

[tool.ruff.format]
docstring-code-format = true
