[project]
name = "ManthanAI"
version = "0.1.0"
description = "ManthanAI is an LLM-based autonomous agent designed to perform comprehensive online research on any given topic."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id>=4.3.3",
    "beautifulsoup4>=4.12.3",
    "fastapi[standard]>=0.115.0",
    "langchain-community>=0.3.1",
    "langchain-google-genai>=2.0.1",
    "langchain-groq>=0.2.0",
    "langchain>=0.3.3",
    "langgraph>=0.2.34",
    "lxml>=5.3.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.2",
    "tavily-python>=0.5.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.0",
    "ruff>=0.6.9",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "SIM",  # flake8-simplify
    "I",  # isort
]

[tool.ruff.format]
docstring-code-format = true
